third task is done

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="homeworks/script/task1.js"></script>
-    <script src="homeworks/script/task2.js"></script>
-    <script src="homeworks/script/task?.js"></script>
+    <script src="script/first_task.js"></script>
+    <script src="script/second_task.js"></script>
+    <script src="script/third_task.js"></script>
+    <script src="script/taskx.js"></script>
 </body>
 </html>
