done the 4 task

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="script/first_task.js"></script>
     <script src="script/second_task.js"></script>
     <script src="script/third_task.js"></script>
+    <script src="script/fourth_task.js"></script>
     <script src="script/taskx.js"></script>
 </body>
 </html>
