homework is done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="script/second_task.js"></script>
     <script src="script/third_task.js"></script>
     <script src="script/fourth_task.js"></script>
+    <script src="script/fifth_task.js"></script>
+    <script src="script/sixth_task.js"></script>
+    <script src="script/seventh_task.js"></script>
     <script src="script/taskx.js"></script>
 </body>
 </html>
