homework is done.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <script src="script/fifth_task.js"></script>
     <script src="script/sixth_task.js"></script>
     <script src="script/seventh_task.js"></script>
-    <script src="script/taskx.js"></script>
+    <script src="script/eights_task.js"></script>
 </body>
 </html>
